# RoboMaster_S1_Web_Remote

./: .gitignore  README.md  arena_cam.py  blower.py  connection.py  connectionEP.py  crosshair_test.py  pyautogui_test.py  robot.py  sniffer.py
RoboMaster App Files/RoboMaster_Data/: boot.config
RoboMaster App Files/RoboMaster_Data/Managed/: NetMQ.xml
extras/connection/network/: direct_connection.py  robot_connection.py
extras/stream/decoder/windows/libh264decoder/libh264decoder-0.0.1/: CMakeLists.txt  PKG-INFO  setup.py
extras/stream/decoder/windows/libh264decoder/libh264decoder-0.0.1/libh264decoder.egg-info/: SOURCES.txt  top_level.txt
extras/stream/decoder/windows/opus_decoder/opus_decoder-0.0.1/: CMakeLists.txt  PKG-INFO  setup.py
extras/stream/decoder/windows/opus_decoder/opus_decoder-0.0.1/opus_decoder.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
extras/stream/python_stream_liveview/: liveview.py
s1_sdk_hack/: Guide on how to enable the DJI EP SDK on S1s.docx  patch.sh  upload.ps1  upload.sh
s1_sdk_hack/dji_scratch/sdk/: sdk_manager.py  version.txt
s1_sdk_hack/dji_scratch/sdk/plaintext_sdk/: __init__.py  protocal_mapping_table.json  protocal_parser.py
server_example/: client.js  server.py
